@@ -14,7 +14,7 @@
 </HEAD>
 <BODY>
 <BLOCKQUOTE>
-<DIV align=right><h5>Last update 24-Feb-2004</h5></div>
+<DIV align=right><h5>Last update 06-Nov-2004</h5></div>
 <DIV align=center><h1>MBSE BBS Control Codes in ANSI and ASCII files</h1></DIV>
 <hr>
 
@@ -47,7 +47,6 @@ For example: ^B32000^BThis is the text^B<br>
   D        Uploads in Kilobytes
   E        Download plus upload Kilobytes
   F        Download Kilobyte limit
-  G        Last transfer time
   H        Current file area number
   I        Current file area description
   J        Download files limit
