@@ -57,7 +57,7 @@ int Waitchar(unsigned char *ch, int wtime)
 	    return 1;
 	}
 	if (tty_status != STAT_TIMEOUT) {
-	    Syslog('t', "Waitchar(): error rc=%d", rc);
+//	    Syslog('t', "Waitchar(): error rc=%d", rc);
 	    return rc;
 	}
 	msleep(10);
@@ -78,7 +78,7 @@ int Escapechar(unsigned char *ch)
      * 50 mSec, the user really pressed <esc>.
      */
     if ((rc = Waitchar(ch, 5)) == TIMEOUT) {
-	Syslog('t', "Escapechar() real escape");
+//	Syslog('t', "Escapechar() real escape");
 	return rc;
     }
 
@@ -87,9 +87,9 @@ int Escapechar(unsigned char *ch)
          *  Start of CSI sequence. If nothing follows,
          *  return immediatly.
          */
-	Syslog('t', "Escapechar() CSI intro");
+//	Syslog('t', "Escapechar() CSI intro");
 	if ((rc = Waitchar(ch, 5)) == TIMEOUT) {
-	    Syslog('t', "Escapechar() nothing follows");
+//	    Syslog('t', "Escapechar() nothing follows");
 	    return rc;
 	}
 
@@ -99,7 +99,7 @@ int Escapechar(unsigned char *ch)
          *  guaranteed to work with PC-clients.
          */
         c = *ch;
-	Syslog('t', "Escapechar() CSI input %d", c);
+//	Syslog('t', "Escapechar() CSI input %d", c);
         if (c == 'A')
 	    c = KEY_UP;
 	else if (c == 'B')
@@ -125,12 +125,12 @@ int Escapechar(unsigned char *ch)
 	    Waitchar(ch, 5);    /* Eat following ~ char */
 	    c = KEY_PGDN;
 	} else if (c == '1') {
-	    Syslog('t', "Possible function key");
+//	    Syslog('t', "Possible function key");
 	    if ((rc = Waitchar(ch, 5)) == TIMEOUT) {
 		c = KEY_HOME;
 	    } else {
 		c = *ch;
-		Syslog('t', "next %d %c", c, c);
+//		Syslog('t', "next %d %c", c, c);
 		Waitchar(ch, 5);    /* Eat following ~ char */
 		switch (c) {
 		    case '1'	: c = KEY_F1;	break;
@@ -144,11 +144,11 @@ int Escapechar(unsigned char *ch)
 		}
 	    }
 	}
-	Syslog('t', "Escapechar() will return %d", c);
+//	Syslog('t', "Escapechar() will return %d", c);
 	memcpy(ch, &c, sizeof(unsigned char));
 	return rc;
     }
-    Syslog('t', "Escapechar() not a CSI sequence");
+//    Syslog('t', "Escapechar() not a CSI sequence");
 
     return -1;
 }
@@ -167,7 +167,7 @@ unsigned char Readkey(void)
     unsigned char   ch = 0;
     int             rc = TIMEOUT;
 
-    Syslog('t', "Readkey()");
+//    Syslog('t', "Readkey()");
     while (rc == TIMEOUT) {
 	rc = Waitchar(&ch, 5);
 //	Syslog('t', "rc = %d, ch = %d", rc, ch);
@@ -177,22 +177,22 @@ unsigned char Readkey(void)
          * then this function is finished.
          */
         if ((rc == 1) && (ch != KEY_ESCAPE)) {
-	    Syslog('t', "Readkey() returns %d", ch);
+//	    Syslog('t', "Readkey() returns %d", ch);
 	    return ch;
 	}
 
 	if ((rc == 1) && (ch == KEY_ESCAPE)) {
 	    rc = Escapechar(&ch);
 	    if (rc == 1) {
-		Syslog('t', "Readkey() escaped returns %d", ch);
+//		Syslog('t', "Readkey() escaped returns %d", ch);
 		return ch;
 	    } else {
-		Syslog('t', "Readkey() escaped returns %d (real escape)", KEY_ESCAPE);
+//		Syslog('t', "Readkey() escaped returns %d (real escape)", KEY_ESCAPE);
 		return KEY_ESCAPE;
 	    }
 	}
     }
-    Syslog('t', "Readkey() returns %d", rc);
+//    Syslog('t', "Readkey() returns %d", rc);
     return rc;
 }
 
